--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+  repository_dispatch:
+    types:
+      - trigger_build
 jobs:
   deploy:
     name: Deploy app
